refactor authentication logic